--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.1",
-	"appid": "wx12cc201fab5b87e6",
+	"appid": "wx1c721a2e355de9ba",
 	"projectname": "guessNum",
 	"isGameTourist": false,
 	"condition": {
