--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
   "pages": [
     "pages/index/index",
+    "components/pop/pop",
+    "components/keyboard/keyboard",
+    "pages/rank/rank",
     "pages/guess/guess",
     "pages/share/share",
     "pages/record/record",
-    "pages/rank/rank",
     "pages/help/help",
     "pages/tixian/tixian",
     "pages/test/test",
-    "components/keyboard/keyboard",
-    "pages/QRtest/index",
-    "components/pop/pop"
+    "pages/QRtest/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
